# QT-SO-Project

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.1A2DFB0B3A62FFA2.idx  main.cpp.FDCC1A4FEB4609F6.idx  test-plugin-interface.h.31CD3DBF672840C0.idx  test-plugin-interface.h.41E6892E8EBF2968.idx  test-plugin-interface.h.6EF5326C90D6F961.idx  test-plugin-interface.h.7BE3323AE4B5D191.idx  test-plugin-interface.h.AF6458CA5C8119F8.idx  test-plugin-interface.h.C1F85B9ACCEBF211.idx  test-plugin.cpp.2726C4FD645E2D49.idx  test-plugin.cpp.3A16409A5709716F.idx  test-plugin.cpp.4C210579293A1AC3.idx  test-plugin.cpp.8412396984A80E71.idx  test-plugin.cpp.8981079BF24A33E8.idx  test-plugin.cpp.AA25B948DB1A3B73.idx  test-plugin.h.03FBC56DDEECD9E8.idx  test-plugin.h.0E7C2B5DC1CDECCD.idx  test-plugin.h.44CD00AC303F2793.idx  test-plugin.h.54C964E685324E69.idx  test-plugin.h.FE5531D8FFFC694B.idx  test-plugin.h.FFDFCD38BFB96B4A.idx  test.cpp.863DA830F3DE182F.idx  test.cpp.DF5CE4AB36D73C4A.idx
app/: CMakeLists.txt  main.cpp
dlib/: CMakeLists.txt  test-plugin.cpp  test-plugin.h
dlib2/: CMakeLists.txt  test-plugin-interface.h  test-plugin.cpp
dlib3/: CMakeLists  CMakeLists.txt  test-plugin.cpp
test/: CMakeLists.txt  test.cpp
